# CreditChecker

./: CMakeLists.txt  Makefile  README.md  binary
assets/: modules  modules.data
src/: Displayer.cpp  Displayer.hpp  Main.cpp  Module.hpp  Parser.cpp  Parser.hpp  Project.hpp  Roadblock.cpp  Roadblock.hpp  Saver.cpp  Saver.hpp
